trunk/Archive2/57/fc27b564ba84f8/output
main.cpp: In function 'int main()':
main.cpp:48:7: error: 'second' is not a member of 'boost::mpl::deref<boost::mpl::filter_view<boost::mpl::map<boost::mpl::pair<mpl_::int_<0>, int>, boost::mpl::pair<mpl_::int_<1>, float> >, IsInvalid> >::type {aka boost::mpl::filter_view<boost::mpl::map<boost::mpl::pair<mpl_::int_<0>, int>, boost::mpl::pair<mpl_::int_<1>, float> >, IsInvalid>}'
     c(deref<NotZero>::type::second() );
       ^
